# map_scatter

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-site.yml
2d-3d/: index.html
architecture/: index.html
bevy/: index.html
concepts/: index.html
crates/bevy_map_scatter/: CHANGELOG.md  Cargo.toml  README.md
crates/bevy_map_scatter/src/: assets.rs  events.rs  lib.rs  streaming.rs  textures.rs
crates/bevy_map_scatter_examples/: Cargo.toml  README.md
crates/bevy_map_scatter_examples/assets/: mask.scatter  simple.scatter  streaming.scatter
crates/map_scatter/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
crates/map_scatter/benches/: common.rs  evaluator.rs  sampling.rs  scatter.rs  selection.rs
crates/map_scatter/docs/: components.puml  sequence.puml
crates/map_scatter/src/: error.rs  lib.rs
crates/map_scatter/src/fieldgraph/: cache.rs  compiler.rs  edt.rs  grid.rs  mod.rs  node.rs  program.rs  raster.rs  runtime.rs  spec.rs  texture.rs
crates/map_scatter/src/sampling/: best_candidate.rs  clustered.rs  fibonacci_lattice.rs  halton.rs  hex_jitter_grid.rs  jitter_grid.rs  mod.rs  poisson_disk.rs  stratified_multi_jitter.rs  uniform_random.rs
crates/map_scatter/src/scatter/: chunk.rs  evaluator.rs  events.rs  mod.rs  overlay.rs  plan.rs  runner.rs  selection.rs
crates/map_scatter_examples/: Cargo.toml  README.md
crates/map_scatter_examples/src/: lib.rs  rendering.rs
docs/: 2d-3d.md  architecture.md  bevy.md  concepts.md  index.md  quickstart.md  reference.md
docs/stylesheets/: extra.css
quickstart/: index.html
reference/: index.html
search/: search_index.json
