[workspace]
members = [
    "crates/map_scatter",
    "crates/map_scatter_examples",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
map_scatter = { path = "crates/map_scatter", version = "0.1.0" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
