[workspace]
members = [
    "crates/bevy_map_scatter",
    "crates/bevy_map_scatter_examples",
    "crates/map_scatter",
    "crates/map_scatter_examples",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.89"

[workspace.dependencies]
map_scatter = { path = "crates/map_scatter", version = "0.4.1" }
bevy_map_scatter = { path = "crates/bevy_map_scatter", version = "0.4.1" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
