[package]
name = "bevy_map_scatter"
version = "0.3.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
authors = ["Mario Morgenthum <mario.morgenthum@gmail.com>"]
description = "Bevy plugin that integrates the `map_scatter` core crate for object scattering with field-graph evaluation and sampling"
documentation = "https://docs.rs/bevy_map_scatter"
repository = "https://github.com/morgenthum/map_scatter"
keywords = ["bevy", "gamedev", "map-generation", "procedural", "sampling"]
categories = ["algorithms", "game-development", "game-engines", "graphics"]
readme = "README.md"

[features]
default = ["serde", "ron"]
serde = ["dep:serde", "map_scatter/serde"]
ron = ["dep:ron", "serde"]

[dependencies]
bevy = { default-features = false, version = "0.18", features = [
    "bevy_asset",
    "bevy_image",
    "bevy_log",
    "bevy_render",
] }
map_scatter = { workspace = true }
rand = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
glam = "0.30"
ron = { version = "0.12", optional = true }
anyhow = "1"
crossbeam-channel = "0.5"
