[package]
name = "bevy_map_scatter_examples"
version = "0.4.0"
edition = "2021"
rust-version = "1.89"
publish = false
license = "MIT OR Apache-2.0"
description = "Executable examples for bevy_map_scatter."

[dependencies]
bevy = "0.18"
bevy_map_scatter = { workspace = true }
map_scatter = { workspace = true }
rand = "0.9"
glam = "0.30"
