[package]
name = "map_scatter"
version = "0.2.1"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Mario Morgenthum <mario.morgenthum@gmail.com>"]
description = "Rule-based object scattering library with field-graph evaluation and sampling"
documentation = "https://docs.rs/map_scatter"
repository = "https://github.com/morgenthum/map_scatter"
keywords = ["gamedev", "map-generation", "poisson-disk", "procedural", "sampling"]
categories = ["algorithms", "game-development", "game-engines", "graphics"]
readme = "README.md"
exclude = ["benches/**"]

[dependencies]
glam = { version = "0.30", features = ["mint"] }
mint = "0.5"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "evaluator"
harness = false

[[bench]]
name = "sampling"
harness = false

[[bench]]
name = "scatter"
harness = false

[[bench]]
name = "selection"
harness = false
